Fix horizontal scroll issue

--- a/components/base/global.css
+++ b/components/base/global.css
@@ -36,7 +36,7 @@
   --focus-ring-width: 2px;
   --focus-ring-color: var(--color-black);
 
-  --border-width: 0.125rem;
+  --border-width: 2px;
 
   /* Easing curves */
 
